k8s-kustomize/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uaa-deployment
spec:
  selector:
    matchLabels:
      app: uaa
  replicas: 1
  template:
    metadata:
      labels:
        app: uaa
    spec:
      containers:
        - name: uaa
          image: dtr.predix.io/pcs/uaa:75.18.0
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: uaa-yaml-config-volume
              mountPath: /uaa/uaa.yml
              subPath: uaa.yml
              readOnly: true
      volumes:
        - name: uaa-yaml-config-volume
          configMap:
            name: uaa-yml-config
