k8s-kustomize/service.yml
apiVersion: v1
kind: Service
metadata:
  name: uaa-service
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: uaa
